engine/codex-rs/tui/src/app/snapshots/codex_tui__app__warnings_tests__warnings_partial_dismissal.snap
---
source: tui/src/app/warnings_tests.rs
expression: "crate::chatwidget::tests::helpers::normalize_snapshot_paths(screen)"
---
Earlier transcript row 12
Earlier transcript row 13
Earlier transcript row 14
Earlier transcript row 15
Earlier transcript row 16
Earlier transcript row 17
Earlier transcript row 18
Earlier transcript row 19
Earlier transcript row 20
Earlier transcript row 21
Earlier transcript row 22
Earlier transcript row 23
Earlier transcript row 24
Earlier transcript row 25
Earlier transcript row 26
Earlier transcript row 27
Earlier transcript row 28
Earlier transcript row 29
                             ↓ Back to bottom · esc

› draft

  GPT-5.6-Sol default · /tmp/project
  esc latest                                           ⚠ 1 warning · f2 to view
